# templates

./: .gitignore  CLAUDE.md  LICENSE  README.md  templates.json
.github/workflows/: release-templates.yml
go/code_reviewer/: .env.example  .gitignore  README.md  agents.go  agnt5.yaml  config.go  functions.go  go.mod  main.go  models.go  tools.go  utils.go  workflow.go
go/code_reviewer/src/code_reviewer/: agents.go  config.go  functions.go  models.go  tools.go  utils.go  workflow.go
go/coding_agent/: .env.example  .gitignore  README.md  agnt5.yaml  config.go  e2b.go  functions.go  go.mod  main.go  models.go  utils.go  workflow.go
go/coding_agent/src/coding_agent/: config.go  e2b.go  functions.go  models.go  utils.go  workflow.go
go/hitl_deep_research/: .gitignore  README.md  agents.go  agnt5.yaml  functions.go  go.mod  main.go  tools.go  workflows.go
go/hitl_deep_research/src/hitl_deep_research/: agents.go  functions.go  tools.go  workflows.go
go/quickstart/: .gitignore  README.md  agnt5.yaml  functions.go  go.mod  main.go  workflows.go
go/quickstart/src/quickstart/: functions.go  workflows.go
go/travel_booking_customer_service/: .gitignore  README.md  agents.go  agnt5.yaml  go.mod  main.go  tools.go  workflows.go
go/travel_booking_customer_service/src/travel_booking_customer_service/: agents.go  tools.go  workflows.go
go/tutor_agent/: .gitignore  README.md  agents.go  agnt5.yaml  go.mod  main.go  workflows.go
go/tutor_agent/src/tutor_agent/: agents.go  workflows.go
go/weather-agent/: .gitignore  README.md  agents.go  agnt5.yaml  functions.go  go.mod  main.go  models.go  tools.go  workflows.go
go/weather-agent/src/weather-agent/: agents.go  functions.go  models.go  tools.go  workflows.go
python/: README.md
python/code_reviewer/: .gitignore  README.md  agnt5.yaml  app.py  pyproject.toml  test.py
python/code_reviewer/reports/: agnt5_pr_206_review.md  pull_pr__review.md
python/code_reviewer/src/code_reviewer/: __init__.py  agents.py  entities.py  functions.py  models.py  tools.py  utils.py  workflow.py
python/code_reviewer/src/code_reviewer/config/: settings.py
python/code_reviewer/src/code_reviewer/prompts/: __init__.py  code_review_prompts.py
python/coding_agent/: .env.example  .gitignore  README.md  agnt5.yaml  app.py  final_response.md  pyproject.toml  test_workflow.py
python/coding_agent/src/coding_agent/: __init__.py  functions.py  models.py  tools.py  workflows.py
python/coding_agent/src/coding_agent/prompts/: coding_agent_prompts.py
python/coding_agent/src/coding_agent_agnt5/: __init__.py  functions.py  models.py  tools.py  workflows.py
python/coding_agent/src/coding_agent_agnt5/config/: settings.py
python/coding_agent/src/coding_agent_agnt5/prompts/: __init__.py  coding_agent_prompts.py
python/customer_service/: README.md  app.py  blog.md
python/customer_service/src/travel_booking/: __init__.py  agents.py  entities.py  tools.py  workflows.py
python/deep-wiki-agent/: README.md  agnt5.yaml  app.py  pyproject.toml
python/deep-wiki-agent/src/deep_wiki_agent/: __init__.py  functions.py  workflows.py
python/deep_research/: README.md  agnt5.yaml  app.py  pyproject.toml
python/deep_research/src/deep_research/: agents.py  entities.py  prompts.py  workflows.py
python/hitl_deep_research/: .env.example  .gitignore  README.md  agnt5.yaml  app.py  pyproject.toml
python/hitl_deep_research/src/deep_research/: __init__.py  agents.py  functions.py  tools.py  workflows.py
python/quickstart/: .env.example  README.md  agnt5.yaml  app.py  pyproject.toml
python/quickstart/src/agnt5_quickstart/: __init__.py  functions.py  workflows.py
python/support-triage/: .env.example  README.md  agnt5.yaml  app.py  demo.sh  pyproject.toml  test.py
python/support-triage/data/: tickets.jsonl
python/support-triage/src/support_triage/: __init__.py  agent.py  functions.py  tools.py  workflows.py
python/travel_booking_customer_service/: README.md  agnt5.yaml  app.py  pyproject.toml
python/travel_booking_customer_service/src/customer_service/: __init__.py  agents.py  workflows.py
python/travel_booking_customer_service/src/travel_booking/: __init__.py  agents.py  tools.py  workflows.py
python/tutor_agent/: README.md  agents.py  agnt5.yaml  app.py  entities.py  main.py  pyproject.toml  requirements.txt  workflows.py
python/tutor_agent/src/tutor_agent/: __init__.py  agents.py  workflows.py
python/weather-agent/: .gitignore  README.md  agnt5.yaml  app.py  pyproject.toml  test.py
python/weather-agent/src/weather_agent/: __init__.py  agents.py  config.py  functions.py  models.py  tools.py  workflows.py
typescript/: README.md
typescript/code_reviewer/: .gitignore  README.md  agnt5.yaml  app.ts  package-lock.json  package.json  tsconfig.json
typescript/code_reviewer/src/: agents.ts  functions.ts  models.ts  tools.ts  utils.ts  workflow.ts
typescript/code_reviewer/src/prompts/: index.ts
typescript/coding_agent/: .env.example  .gitignore  README.md  agnt5.yaml  app.ts  package-lock.json  package.json  tsconfig.json
typescript/coding_agent/src/: functions.ts  models.ts  tools.ts  workflow.ts
typescript/coding_agent/src/prompts/: index.ts
typescript/hitl_deep_research/: README.md  agnt5.yaml  app.ts  package-lock.json  package.json  tsconfig.json
typescript/hitl_deep_research/src/: agents.ts  functions.ts  tools.ts  workflows.ts
typescript/quickstart/: README.md  agnt5.yaml  app.ts  package-lock.json  package.json  pnpm-lock.yaml
typescript/quickstart/src/: functions.ts  workflows.ts
typescript/travel_booking_customer_service/: README.md  agnt5.yaml  app.ts  package-lock.json  package.json
typescript/travel_booking_customer_service/src/: agents.ts  tools.ts  workflows.ts
typescript/tutor_agent/: README.md  agnt5.yaml  app.ts  package-lock.json  package.json
typescript/tutor_agent/src/: agents.ts  workflows.ts
typescript/weather-agent/: .gitignore  README.md  agnt5.yaml  app.ts  package-lock.json  package.json
typescript/weather-agent/src/: agents.ts  config.ts  functions.ts  models.ts  tools.ts  workflow.ts
