[project]
name = "code_reviewer"
version = "0.1.2"
description = "Code Reviewer Agent built using AGNT5 SDK"
readme = "README.md"
authors = [
    { name = "CudaX1906", email = "polasanirohit@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "agnt5~=0.8.7",
    "python-dotenv>=1.1.1",
]

[project.scripts]
code_reviewer = "code_reviewer:main"

[build-system]
requires = ["uv-build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
