[project]
name = "coding_agent_agnt5"
version = "0.1.0"
description = "AI-powered coding agent with test-driven development"
readme = "README.md"
authors = [
    { name = "CudaX1906", email = "polasanirohit@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agnt5~=0.3.7",
    "e2b-code-interpreter>=2.0.0",
    "groq>=0.32.0",
    "loguru>=0.7.3",
    "openai>=2.1.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.scripts]
coding-agent = "coding_agent:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.venv-local
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

