[project]
name = "deep-wiki-agent"
version = "0.1.2"
description = "AGNT5 template: durable investigator agent with DeepWiki MCP, human review, and a checkpointed save step"
authors = [
    { name = "AGNT5 Devs", email = "devs@agnt5.com" }
]
dependencies = [
    "agnt5~=0.8.7",
]
readme = "README.md"
requires-python = ">= 3.12"
keywords = ["agnt5", "workflow", "agent", "mcp", "deep-wiki", "investigator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/agnt5/agnt5"
Documentation = "https://docs.agnt5.com"
Repository = "https://github.com/agnt5/agnt5"
"Bug Tracker" = "https://github.com/agnt5/agnt5/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest~=8.4",
    "pytest-asyncio~=1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deep_wiki_agent"]
