[project]
name = "agnt5-quickstart"
version = "0.2.1"
description = "AGNT5 quickstart: fan-out workflow that summarizes the top Hacker News stories"
authors = [
    { name = "AGNT5 Devs", email = "devs@agnt5.com" }
]
dependencies = [
    "agnt5~=0.7.3",
    "httpx~=0.27",
]
readme = "README.md"
requires-python = ">= 3.12"
keywords = ["agnt5", "workflow", "agent", "quickstart", "hacker-news"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/agnt5/agnt5"
Documentation = "https://docs.agnt5.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agnt5_quickstart"]
