[project]
name = "support-triage"
version = "0.1.0"
description = "AGNT5 Killer Quickstart - Support Triage Agent with crash-resume, HITL, and exactly-once semantics"
authors = [
    { name = "AGNT5 Devs", email = "devs@agnt5.com" }
]
dependencies = [
    "agnt5~=0.4.0a1",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.14"
keywords = ["agnt5", "workflow", "ai", "orchestration", "support", "triage", "hitl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/agnt5/agnt5"
Documentation = "https://docs.agnt5.com"
Repository = "https://github.com/agnt5/agnt5"
"Bug Tracker" = "https://github.com/agnt5/agnt5/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest~=8.4",
    "pytest-asyncio~=1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/support_triage"]

[tool.uv.sources]
agnt5 = { path = "../../../sdk-python", editable = true }
