[project]
name = "travel_booking"
version = "1.0.0"
description = "Travel booking service with AGNT5"
requires-python = ">=3.11"
dependencies = [
    "agnt5~=0.3.7",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
