[project]
name = "customer-service-agnt5"
version = "1.0.2"
description = "Customer service assistant for travel booking, built with AGNT5"
requires-python = ">=3.14"

dependencies = [
    "agnt5~=0.8.7",
    "requests>=2.31.0",
    "python-dotenv>=1.2.1",
    "anthropic>=0.112.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/customer_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: live network tests (deselect with '-m not integration')",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
