[project]
name = "weather_agent"
version = "0.1.0"
description = "Weather Agent built using AGNT5 SDK"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "agnt5>=0.3.0a7",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.scripts]
weather_agent = "weather_agent:main"

[build-system]
requires = ["uv-build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
